# EngWord

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Controllers/: exercises_controller.cpp  exercises_controller.h  main_window.cpp  main_window.h  settings.cpp  settings.h
Controllers/MainWindow/: main_window.cpp  main_window.h
MainWindow/: main_window.cpp  main_window.h  menu.cpp  menu.h
Models/: exercises_set.cpp  exercises_set.h  settings.cpp  settings.h  words.cpp  words.h
Views/: menu.cpp  menu.h  settings_view.cpp  settings_view.h
Views/Exercises/: animation.cpp  animation.h  audio_view.cpp  audio_view.h  exercises_set_view.cpp  exercises_set_view.h  input_view.cpp  input_view.h  pick_view.cpp  pick_view.h
Views/Menu/: menu.cpp  menu.h  settings_view.cpp  settings_view.h
helpers/: backgrounds.h  fonts.h  sizes.h  styles.h
resources/: audio.qrc  images.qrc  words.qrc
resources/words/: easy.json  hard.json
